<resources>
    <string name="app_name">BMICalculator</string>
    <string name="friday_night_hehe">Friday Night hehe</string>
    <string name="calculate">Calculate</string>
    <string name="_23_6_you_are_a_healthy_weight">23.6 - You are a healthy weight!</string>
    <string name="weight">Weight (kg)</string>
    <string name="jojos_app_popup">Jojo\'s App Popup</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="inches">Inches</string>
    <string name="feet">Feet</string>
    <string name="age">Age</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
</resources>