<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/tape_measure"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bmi_calculator" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radio_button_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <EditText
        android:id="@+id/edit_text_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_ft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/feet"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_text_inches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/inches"
            android:inputType="number" />

    </LinearLayout>


    <EditText
        android:id="@+id/edit_text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/weight"
        android:inputType="number" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp" />


</LinearLayout>